--- a/application/modules/planner/views/scripts/forms/edit-day.phtml
+++ b/application/modules/planner/views/scripts/forms/edit-day.phtml
@@ -78,6 +78,8 @@ $this->selectedStatus2 = $selectedStatus2;
         echo $this->render('forms/color_button.phtml');
         $this->status = $statuses[6];
         echo $this->render('forms/color_button.phtml');
+        $this->status = $statuses[7];
+        echo $this->render('forms/color_button.phtml');
     ?>
 </div>
 <?php elseif ($selectedStatus1 == 1) ://white color status ?>
