--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -4944,7 +4944,7 @@ input[type="submit"].btn.btn-mini {
   line-height: 30px;
 }
 
-.modal-body {
+modal {
   max-height: 400px;
   padding: 15px;
   overflow-y: auto;
