--- a/application/modules/planner/views/scripts/user-settings/index.phtml
+++ b/application/modules/planner/views/scripts/user-settings/index.phtml
@@ -42,8 +42,13 @@
         $groups = implode(', ', $groups);
         $groupRoles = rtrim($groupRoles, ';');
         try {
-            $userBirthdayFormatted = new DateTime($user['birthday']);
-            $userBirthdayFormatted = $userBirthdayFormatted->format('d-m-Y');
+            if ( ! empty($user['birthday']) && $user['birthday'] != '0000-00-00') {
+                $userBirthdayFormatted = new DateTime($user['birthday']);
+                $userBirthdayFormatted = $userBirthdayFormatted->format('d-m-Y');
+            } else {
+                $userBirthdayFormatted = '';
+                $user['birthday'] = '';
+            }
         } catch (Exception $e) {$userBirthdayFormatted = $user['birthday'];}
         ?>
 
